<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="#202732">

    <TextView
        android:id="@+id/TVtexto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/icono"
        android:layout_margin="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/TxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textColor="#FFFFFF"
        android:layout_margin="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#616161"
        android:textColorHint="#616161"
        >

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/TxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_rounded"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_rounded_border"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/registrar"
        />

<!--
    <Button
        android:id="@+id/restablecerContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_rounded_border_red"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/password"
        />
-->
    <Button
        android:id="@+id/botonSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_rounded_red"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/exit"
        />


</LinearLayout>