<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/EditarPlantasActivity"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EditarPlantasActivity"
    android:background="#202732">

    <TextView
        android:id="@+id/TVtexto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="ACTUALIZAR PLANTA "
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre1"
        android:layout_marginTop="20dp"
        android:textColor="#A7FFEB"
        android:textSize="21sp"
        />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/caracteristicas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caracteristicas1"
        android:layout_marginTop="20dp"
        android:textColor="#A7FFEB"
        android:textSize="21sp"
        />

    <EditText
        android:id="@+id/editTextCaract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:id="@+id/cuidados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuidados1"
        android:layout_marginTop="20dp"
        android:textColor="#A7FFEB"
        android:textSize="21sp"
        />

    <EditText
        android:id="@+id/editTextCuida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/actualizarplanta"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/button6"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/button_rounded_border_red"
            android:textColor="#FFFFFF"
            android:text="@string/cancelar"
            />

        <Button
            android:id="@+id/button7"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textAlignment="center"
            android:background="@drawable/button_rounded_red"
            android:textColor="#FFFFFF"
            android:text="@string/exit"
            />

    </LinearLayout>

</LinearLayout>