<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#202732">


    <TextView
        android:id="@+id/TVtexto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="27dp"
        android:text="REGISTRAR USUARIO"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icono" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/TxtEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="#616161"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#616161"
        android:textColorHint="#616161"
        >


        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/TxtPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColorHint="#616161"
            android:textColor="#FFFFFF"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/botonRegistrar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/registrar"
        />

    <Button
        android:id="@+id/botonCancelR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded_border"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/cancelar"
        />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_rounded_red"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/exit"
        />

</LinearLayout>